<resources>
    <string name="app_name">MeetPlace</string>

    <!-- Strings related to login -->
    <string name="search_commit">確定</string>
    <string name="default_email">gmail.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="friend_list">好友列表</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">我的好友</string>
    <string name="action_logOut">登出</string>
    <string name="title_activity_rent_page">rentPage</string>
    <string-array name="people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragme</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings map -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="option_logout">Logout</string>
    <string name="pick_place">Choose a place</string>
    <string name="Change_Title">修改標記名稱</string>
    <string name="Latitude">經度 : </string>
    <string name="Longtitude">緯度 : </string>
    <string name="success_modify">修改成功!</string>>
    <string name="Err_blank_name">名稱不可空白</string>
    <string name="del_mkr">刪除標記</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="RealtimeLoc_Switch">即時位置同步設定</string>
    <string name="Logout">登出</string>
    <string name="about">關於</string>
    <string name="open_navigation">Open</string>
    <string name="close_navigation">Close</string>
    <string name="close_realtime_access">關閉位置同步</string>
    <string name="open_realtime_access">開啟位置同步</string>
    <string name="user_name"> %1$s </string>
    <string name="getcenterpoint">取得中心點及附近點</string>
    <string name="hide_nearplacemarker">清除所有附近點</string>
    <string name="chat_member_list">聊天室成員清單</string>
    <string name="nearplacestore">附近商家清單</string>
    <string name="naviplacestore">沿途商家名單</string>
    <string name="restaurant">餐廳</string>
    <string name="cafestore">咖啡店</string>
    <string name="shopping_mall">百貨公司</string>
    <string name="followmode">開啟追隨模式</string>
    <string name="closefollowmode">關閉追隨模式</string>
    <string name="navi">路徑規劃</string>
    <string name="test">測試</string>
    <string name="navi_ori">目前位置到目的地</string>
    <string name="navi_all">所有人位置目的地</string>
    <string name="navi_customize">自訂......</string>
    <string name="clean_naviroute">清除路線</string>
    <string name="clean_navinearstore">清除沿途商家</string>
    <string name="maps_add_friend">聊天室新增成員</string>
    <string name="quick_to_finplace">開啟最終地點快捷鍵</string>
    <string name="close_quick_to_finplace">關閉最終地點快捷鍵</string>



</resources>
